--- a/TestingSite.Backend/package.json
+++ b/TestingSite.Backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "YahalomTestsServer",
+  "name": "testing_site_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose ./tests --config ./jest.config.json",
     "debug": "node --nolazy --inspect app.js"
   },
   "keywords": [],
@@ -15,7 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mongodb-memory-server": "^8.0.2",
     "mongoose": "^6.0.13",
     "mongoose-timestamp": "^0.6.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
