--- a/TestingSite.Backend/package.json
+++ b/TestingSite.Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose ./tests --config ./jest.config.json",
-    "debug": "node --nolazy --inspect app.js"
+    "debug": "node --nolazy --inspect app.js",
+    "swagger-autogen": "node ./swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,11 @@
     "fs": "0.0.1-security",
     "mongodb-memory-server": "^8.0.2",
     "mongoose": "^6.0.13",
-    "mongoose-timestamp": "^0.6.0"
+    "mongoose-timestamp": "^0.6.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "swagger-autogen": "^2.17.2"
   }
 }
