--- a/TestingSite.Backend/package.json
+++ b/TestingSite.Backend/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongodb-memory-server": "^8.0.2",
     "mongoose": "^6.0.13",
     "mongoose-timestamp": "^0.6.0",
+    "nodemailer": "^6.7.2",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
